src/test/ui/feature-gate/issue-43106-gating-of-macro_use.stderr
error: arguments to macro_use are not allowed here
  --> $DIR/issue-43106-gating-of-macro_use.rs:6:1
   |
LL | #![macro_use(my_macro)]
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: arguments to macro_use are not allowed here
  --> $DIR/issue-43106-gating-of-macro_use.rs:9:1
   |
LL | #[macro_use(my_macro)]
   | ^^^^^^^^^^^^^^^^^^^^^^

error: arguments to macro_use are not allowed here
  --> $DIR/issue-43106-gating-of-macro_use.rs:12:17
   |
LL |     mod inner { #![macro_use(my_macro)] }
   |                 ^^^^^^^^^^^^^^^^^^^^^^^

error: malformed `macro_use` attribute input
  --> $DIR/issue-43106-gating-of-macro_use.rs:15:5
   |
LL |     #[macro_use = "2700"] struct S;
   |     ^^^^^^^^^^^^^^^^^^^^^
help: the following are the possible correct uses
   |
LL |     #[macro_use] struct S;
   |     ^^^^^^^^^^^^
LL |     #[macro_use(name1, name2, ...)] struct S;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

